# hatch-go

./: .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
hatch_go/: __init__.py  hooks.py  plugin.py  structs.py
hatch_go/tests/: test_all.py  test_projects.py  test_structs.py
hatch_go/tests/test_project_basic/: exports.go  main.go  pyproject.toml
