[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "hatch-go-test-project-basic"
description = "Basic test project for hatch-go"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "hatchling>=1.20",
    "hatch-go",
]

[tool.hatch.build]
artifacts = [
    "project/*.dll",
    "project/*.dylib",
    "project/*.so",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["project"]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.hatch.build.hooks.hatch-go]
verbose = true
path = "."
module = "project"
